align padding and color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="https://s3-tp22.s3.ap-southeast-2.amazonaws.com/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SunSafe</title>
+  <meta name="description"
+    content="SunSafe helps you track UV levels and manage sun protection with real-time UV index tracking and smart reminders." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
