--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="https://s3-tp22.s3.ap-southeast-2.amazonaws.com/logo.png" />
+  <link rel="icon" type="image/png" href="https://s3-tp22.s3.ap-southeast-2.amazonaws.com/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SunSafe</title>
   <meta name="description"
